Compilation/TP analyse/Rendu/ppParser.java
// Generated from pp.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ppParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, INTEGER=34, BOOLEAN=35, ID=36, WS=37;
	public static final int
		RULE_p = 0, RULE_listd = 1, RULE_d = 2, RULE_listPair = 3, RULE_pair = 4, 
		RULE_i = 5, RULE_e = 6, RULE_liste = 7, RULE_phi = 8, RULE_bop = 9, RULE_uop = 10, 
		RULE_k = 11, RULE_type = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"p", "listd", "d", "listPair", "pair", "i", "e", "liste", "phi", "bop", 
			"uop", "k", "type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'var'", "'('", "')'", "':'", "':='", "'['", "']'", "'if'", "'then'", 
			"'else'", "'while'", "'do'", "'skip'", "';'", "'-'", "'not'", "'+'", 
			"'*'", "'/'", "'and'", "'or'", "'<'", "'<='", "'='", "'!='", "'>='", 
			"'>'", "'new array of'", "'read'", "'write'", "'integer'", "'boolean'", 
			"'array of'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "INTEGER", 
			"BOOLEAN", "ID", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "pp.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ppParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PContext extends ParserRuleContext {
		public PPProg value;
		public Token isglob;
		public ListPairContext globals;
		public ListdContext defs;
		public IContext code;
		public ListdContext listd() {
			return getRuleContext(ListdContext.class,0);
		}
		public IContext i() {
			return getRuleContext(IContext.class,0);
		}
		public ListPairContext listPair() {
			return getRuleContext(ListPairContext.class,0);
		}
		public PContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_p; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ppListener ) ((ppListener)listener).enterP(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ppListener ) ((ppListener)listener).exitP(this);
		}
	}

	public final PContext p() throws RecognitionException {
		PContext _localctx = new PContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_p);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(26);
				((PContext)_localctx).isglob = match(T__0);
				setState(27);
				((PContext)_localctx).globals = listPair();
				}
			}

			setState(30);
			((PContext)_localctx).defs = listd();
			setState(31);
			((PContext)_localctx).code = i(0);

					if (((PContext)_localctx).isglob != null) {
						((PContext)_localctx).value =  new PPProg(((PContext)_localctx).globals.value, ((PContext)_localctx).defs.value, ((PContext)_localctx).code.value);
					}
					else {
						((PContext)_localctx).value =  new PPProg(new ArrayList<Pair<String, Type>>(), ((PContext)_localctx).defs.value, ((PContext)_localctx).code.value);
					}
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListdContext extends ParserRuleContext {
		public ArrayList<PPDef> value;
		public DContext dv;
		public List<DContext> d() {
			return getRuleContexts(DContext.class);
		}
		public DContext d(int i) {
			return getRuleContext(DContext.class,i);
		}
		public ListdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ppListener ) ((ppListener)listener).enterListd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ppListener ) ((ppListener)listener).exitListd(this);
		}
	}

	public final ListdContext listd() throws RecognitionException {
		ListdContext _localctx = new ListdContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_listd);
		((ListdContext)_localctx).value =  new ArrayList<PPDef>();
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(37); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(34);
					((ListdContext)_localctx).dv = d();
					_localctx.value.add(((ListdContext)_localctx).dv.value);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(39); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DContext extends ParserRuleContext {
		public PPDef value;
		public Token name;
		public ListPairContext args;
		public Token isret;
		public TypeContext ret;
		public Token isloc;
		public ListPairContext local;
		public IContext code;
		public TerminalNode ID() { return getToken(ppParser.ID, 0); }
		public IContext i() {
			return getRuleContext(IContext.class,0);
		}
		public List<ListPairContext> listPair() {
			return getRuleContexts(ListPairContext.class);
		}
		public ListPairContext listPair(int i) {
			return getRuleContext(ListPairContext.class,i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public DContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_d; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ppListener ) ((ppListener)listener).enterD(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ppListener ) ((ppListener)listener).exitD(this);
		}
	}

	public final DContext d() throws RecognitionException {
		DContext _localctx = new DContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_d);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			((DContext)_localctx).name = match(ID);
			setState(42);
			match(T__1);
			setState(44);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(43);
				((DContext)_localctx).args = listPair();
				}
			}

			setState(46);
			match(T__2);
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(47);
				((DContext)_localctx).isret = match(T__3);
				setState(48);
				((DContext)_localctx).ret = type();
				}
			}

			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(51);
				((DContext)_localctx).isloc = match(T__0);
				setState(52);
				((DContext)_localctx).local = listPair();
				}
			}

			setState(55);
			((DContext)_localctx).code = i(0);

			        if (((DContext)_localctx).isret != null) {
						if (((DContext)_localctx).isloc != null) {
							((DContext)_localctx).value =  new PPFun((((DContext)_localctx).name!=null?((DContext)_localctx).name.getText():null), ((DContext)_localctx).args.value, ((DContext)_localctx).local.value, ((DContext)_localctx).code.value, ((DContext)_localctx).ret.value);
						} else {
							((DContext)_localctx).value =  new PPFun((((DContext)_localctx).name!=null?((DContext)_localctx).name.getText():null), ((DContext)_localctx).args.value, new ArrayList<Pair<String, Type>>(), ((DContext)_localctx).code.value, ((DContext)_localctx).ret.value);
						}
			        } else {
						if (((DContext)_localctx).isloc != null) {
							((DContext)_localctx).value =  new PPProc((((DContext)_localctx).name!=null?((DContext)_localctx).name.getText():null), ((DContext)_localctx).args.value, ((DContext)_localctx).local.value, ((DContext)_localctx).code.value);
						} else {
							((DContext)_localctx).value =  new PPProc((((DContext)_localctx).name!=null?((DContext)_localctx).name.getText():null), ((DContext)_localctx).args.value, new ArrayList<Pair<String, Type>>(), ((DContext)_localctx).code.value);
						}
			        }
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListPairContext extends ParserRuleContext {
		public ArrayList<Pair<String, Type>> value;
		public PairContext pr;
		public List<PairContext> pair() {
			return getRuleContexts(PairContext.class);
		}
		public PairContext pair(int i) {
			return getRuleContext(PairContext.class,i);
		}
		public ListPairContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listPair; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ppListener ) ((ppListener)listener).enterListPair(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ppListener ) ((ppListener)listener).exitListPair(this);
		}
	}

	public final ListPairContext listPair() throws RecognitionException {
		ListPairContext _localctx = new ListPairContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_listPair);
		((ListPairContext)_localctx).value =  new ArrayList<Pair<String, Type>>();
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(61); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(58);
					((ListPairContext)_localctx).pr = pair();
					_localctx.value.add(((ListPairContext)_localctx).pr.value);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(63); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PairContext extends ParserRuleContext {
		public Pair<String, Type> value;
		public Token n;
		public TypeContext t;
		public TerminalNode ID() { return getToken(ppParser.ID, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public PairContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pair; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ppListener ) ((ppListener)listener).enterPair(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ppListener ) ((ppListener)listener).exitPair(this);
		}
	}

	public final PairContext pair() throws RecognitionException {
		PairContext _localctx = new PairContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_pair);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(65);
			((PairContext)_localctx).n = match(ID);
			setState(66);
			match(T__3);
			setState(67);
			((PairContext)_localctx).t = type();
			}
			((PairContext)_localctx).value =  new Pair((((PairContext)_localctx).n!=null?((PairContext)_localctx).n.getText():null), ((PairContext)_localctx).t.value);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IContext extends ParserRuleContext {
		public PPInst value;
		public IContext i1;
		public Token name;
		public EContext val;
		public EContext arr;
		public EContext index;
		public EContext cond;
		public IContext i2;
		public PhiContext callee;
		public ListeContext args;
		public TerminalNode ID() { return getToken(ppParser.ID, 0); }
		public List<EContext> e() {
			return getRuleContexts(EContext.class);
		}
		public EContext e(int i) {
			return getRuleContext(EContext.class,i);
		}
		public List<IContext> i() {
			return getRuleContexts(IContext.class);
		}
		public IContext i(int i) {
			return getRuleContext(IContext.class,i);
		}
		public PhiContext phi() {
			return getRuleContext(PhiContext.class,0);
		}
		public ListeContext liste() {
			return getRuleContext(ListeContext.class,0);
		}
		public IContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_i; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ppListener ) ((ppListener)listener).enterI(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ppListener ) ((ppListener)listener).exitI(this);
		}
	}

	public final IContext i() throws RecognitionException {
		return i(0);
	}

	private IContext i(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		IContext _localctx = new IContext(_ctx, _parentState);
		IContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_i, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(72);
				((IContext)_localctx).name = match(ID);
				setState(73);
				match(T__4);
				setState(74);
				((IContext)_localctx).val = e(0);
				((IContext)_localctx).value =  new PPAssign((((IContext)_localctx).name!=null?((IContext)_localctx).name.getText():null), ((IContext)_localctx).val.value);
				}
				break;
			case 2:
				{
				setState(77);
				((IContext)_localctx).arr = e(0);
				setState(78);
				match(T__5);
				setState(79);
				((IContext)_localctx).index = e(0);
				setState(80);
				match(T__6);
				setState(81);
				match(T__4);
				setState(82);
				((IContext)_localctx).val = e(0);
				((IContext)_localctx).value =  new PPArraySet(((IContext)_localctx).arr.value, ((IContext)_localctx).index.value, ((IContext)_localctx).val.value);		
						
				}
				break;
			case 3:
				{
				setState(85);
				match(T__7);
				setState(86);
				((IContext)_localctx).cond = e(0);
				setState(87);
				match(T__8);
				setState(88);
				((IContext)_localctx).i1 = i(0);
				setState(89);
				match(T__9);
				setState(90);
				((IContext)_localctx).i2 = i(5);
				((IContext)_localctx).value =  new PPCond(((IContext)_localctx).cond.value, ((IContext)_localctx).i1.value, ((IContext)_localctx).i2.value);
						
				}
				break;
			case 4:
				{
				setState(93);
				match(T__10);
				setState(94);
				((IContext)_localctx).cond = e(0);
				setState(95);
				match(T__11);
				setState(96);
				((IContext)_localctx).i1 = i(4);
				((IContext)_localctx).value =  new PPWhile(((IContext)_localctx).cond.value, ((IContext)_localctx).i1.value);
				}
				break;
			case 5:
				{
				setState(99);
				((IContext)_localctx).callee = phi();
				setState(100);
				match(T__1);
				setState(101);
				((IContext)_localctx).args = liste();
				setState(102);
				match(T__2);
				((IContext)_localctx).value =  new PPProcCall(((IContext)_localctx).callee.value, ((IContext)_localctx).args.value);
				}
				break;
			case 6:
				{
				setState(105);
				match(T__12);
				((IContext)_localctx).value =  new PPSkip();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(116);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new IContext(_parentctx, _parentState);
					_localctx.i1 = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_i);
					setState(109);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(110);
					match(T__13);
					setState(111);
					((IContext)_localctx).i2 = i(2);
					((IContext)_localctx).value =  new PPSeq(((IContext)_localctx).i1.value, ((IContext)_localctx).i2.value);
					}
					} 
				}
				setState(118);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EContext extends ParserRuleContext {
		public PPExpr value;
		public EContext op1;
		public EContext arr;
		public KContext cte;
		public Token id;
		public EContext op2;
		public PhiContext callee;
		public ListeContext args;
		public TypeContext t;
		public EContext size;
		public EContext index;
		public KContext k() {
			return getRuleContext(KContext.class,0);
		}
		public TerminalNode ID() { return getToken(ppParser.ID, 0); }
		public List<EContext> e() {
			return getRuleContexts(EContext.class);
		}
		public EContext e(int i) {
			return getRuleContext(EContext.class,i);
		}
		public PhiContext phi() {
			return getRuleContext(PhiContext.class,0);
		}
		public ListeContext liste() {
			return getRuleContext(ListeContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public EContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_e; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ppListener ) ((ppListener)listener).enterE(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ppListener ) ((ppListener)listener).exitE(this);
		}
	}

	public final EContext e() throws RecognitionException {
		return e(0);
	}

	private EContext e(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		EContext _localctx = new EContext(_ctx, _parentState);
		EContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_e, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(120);
				((EContext)_localctx).cte = k();
				((EContext)_localctx).value =  ((EContext)_localctx).cte.value;
				}
				break;
			case 2:
				{
				setState(123);
				((EContext)_localctx).id = match(ID);
				((EContext)_localctx).value =  new PPVar((((EContext)_localctx).id!=null?((EContext)_localctx).id.getText():null));
				}
				break;
			case 3:
				{
				setState(125);
				match(T__14);
				setState(126);
				((EContext)_localctx).op1 = e(17);
				((EContext)_localctx).value =  new PPInv(((EContext)_localctx).op1.value);
				}
				break;
			case 4:
				{
				setState(129);
				match(T__15);
				setState(130);
				((EContext)_localctx).op2 = e(16);
				((EContext)_localctx).value =  new PPNot(((EContext)_localctx).op2.value);
				}
				break;
			case 5:
				{
				setState(133);
				((EContext)_localctx).callee = phi();
				setState(134);
				match(T__1);
				setState(135);
				((EContext)_localctx).args = liste();
				setState(136);
				match(T__2);
				((EContext)_localctx).value =  new PPFunCall(((EContext)_localctx).callee.value, ((EContext)_localctx).args.value);
				}
				break;
			case 6:
				{
				setState(139);
				match(T__27);
				setState(140);
				((EContext)_localctx).t = type();
				setState(141);
				match(T__5);
				setState(142);
				((EContext)_localctx).size = e(0);
				setState(143);
				match(T__6);
				((EContext)_localctx).value =  new PPArrayAlloc(((EContext)_localctx).t.value, ((EContext)_localctx).size.value);
						
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(216);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(214);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
					case 1:
						{
						_localctx = new EContext(_parentctx, _parentState);
						_localctx.op1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_e);
						setState(148);
						if (!(precpred(_ctx, 15))) throw new FailedPredicateException(this, "precpred(_ctx, 15)");
						setState(149);
						match(T__16);
						setState(150);
						((EContext)_localctx).op2 = e(16);
						((EContext)_localctx).value =  new PPAdd(((EContext)_localctx).op1.value, ((EContext)_localctx).op2.value);
						}
						break;
					case 2:
						{
						_localctx = new EContext(_parentctx, _parentState);
						_localctx.op1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_e);
						setState(153);
						if (!(precpred(_ctx, 14))) throw new FailedPredicateException(this, "precpred(_ctx, 14)");
						setState(154);
						match(T__14);
						setState(155);
						((EContext)_localctx).op2 = e(15);
						((EContext)_localctx).value =  new PPSub(((EContext)_localctx).op1.value, ((EContext)_localctx).op2.value);
						}
						break;
					case 3:
						{
						_localctx = new EContext(_parentctx, _parentState);
						_localctx.op1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_e);
						setState(158);
						if (!(precpred(_ctx, 13))) throw new FailedPredicateException(this, "precpred(_ctx, 13)");
						setState(159);
						match(T__17);
						setState(160);
						((EContext)_localctx).op2 = e(14);
						((EContext)_localctx).value =  new PPMul(((EContext)_localctx).op1.value, ((EContext)_localctx).op2.value);
						}
						break;
					case 4:
						{
						_localctx = new EContext(_parentctx, _parentState);
						_localctx.op1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_e);
						setState(163);
						if (!(precpred(_ctx, 12))) throw new FailedPredicateException(this, "precpred(_ctx, 12)");
						setState(164);
						match(T__18);
						setState(165);
						((EContext)_localctx).op2 = e(13);
						((EContext)_localctx).value =  new PPDiv(((EContext)_localctx).op1.value, ((EContext)_localctx).op2.value);
						}
						break;
					case 5:
						{
						_localctx = new EContext(_parentctx, _parentState);
						_localctx.op1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_e);
						setState(168);
						if (!(precpred(_ctx, 11))) throw new FailedPredicateException(this, "precpred(_ctx, 11)");
						setState(169);
						match(T__19);
						setState(170);
						((EContext)_localctx).op2 = e(12);
						((EContext)_localctx).value =  new PPAnd(((EContext)_localctx).op1.value, ((EContext)_localctx).op2.value);
						}
						break;
					case 6:
						{
						_localctx = new EContext(_parentctx, _parentState);
						_localctx.op1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_e);
						setState(173);
						if (!(precpred(_ctx, 10))) throw new FailedPredicateException(this, "precpred(_ctx, 10)");
						setState(174);
						match(T__20);
						setState(175);
						((EContext)_localctx).op2 = e(11);
						((EContext)_localctx).value =  new PPOr(((EContext)_localctx).op1.value, ((EContext)_localctx).op2.value);
						}
						break;
					case 7:
						{
						_localctx = new EContext(_parentctx, _parentState);
						_localctx.op1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_e);
						setState(178);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(179);
						match(T__21);
						setState(180);
						((EContext)_localctx).op2 = e(10);
